checking in version 2.6.0; repeating donations added; admin view cleanup; lots of fixes and improvements
git-svn-id: https://plugins.svn.wordpress.org/seamless-donations/trunk@821950 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,19 +100,19 @@
 	background: #faa;
 }
 
-.dgx-donate-busy, .dgx-donate-error-msg
+.dgx-donate-busy, .dgx-donate-error-msg, .dgx-donate-pay-disabled
 {
-	visibility: hidden;
+	display: none;
 }
 
 .dgx-donate-form-section input.dgx-donate-pay-enabled
 {
 	padding: 10px;
 	cursor: pointer;
+	border: none;
 }
 
-.dgx-donate-form-section input.dgx-donate-pay-disabled
-{
+.dgx-donate-pay-disabled {
 	padding: 10px;
-	cursor: not-allowed;
 }
+
