added support for international donors
git-svn-id: https://plugins.svn.wordpress.org/seamless-donations/trunk@835925 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,9 +54,13 @@
     vertical-align: middle;
 }
 
-.dgx-donate-form-section p:last-child
+.dgx-donate-form-section > p:last-child
 {
 	margin-bottom: 0;
+}
+
+.dgx-donate-form-section select {
+	max-width: 200px;
 }
 
 .dgx-donate-form-section input.horiz
