--- a/css/styles.css
+++ b/css/styles.css
@@ -54,9 +54,13 @@
     vertical-align: middle;
 }
 
-.dgx-donate-form-section p:last-child
+.dgx-donate-form-section > p:last-child
 {
 	margin-bottom: 0;
+}
+
+.dgx-donate-form-section select {
+	max-width: 200px;
 }
 
 .dgx-donate-form-section input.horiz
@@ -100,19 +104,19 @@
 	background: #faa;
 }
 
-.dgx-donate-busy, .dgx-donate-error-msg
+.dgx-donate-busy, .dgx-donate-error-msg, .dgx-donate-pay-disabled
 {
-	visibility: hidden;
+	display: none;
 }
 
 .dgx-donate-form-section input.dgx-donate-pay-enabled
 {
 	padding: 10px;
 	cursor: pointer;
+	border: none;
 }
 
-.dgx-donate-form-section input.dgx-donate-pay-disabled
-{
+.dgx-donate-pay-disabled {
 	padding: 10px;
-	cursor: not-allowed;
 }
+
